<resources>
    <string name="app_name">Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="star_service">Star service</string>
    <string name="which_is_your_favourite_language">Which is your Favourite Language?</string>
    <string name="fragment">fragment</string>
    <string name="progress">progress</string>
    <string name="stop_service">Stop service</string>
</resources>